[update] cors, jwt claims and controllers